# gemischtes-hack

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.local.json
db/: schema.sql
episodes/: metadata.json
hf-space/: Dockerfile
knowledge-graph/: README.md  build_graph.py  extract_topics.py  requirements.txt  serve.py
knowledge-graph/data/: cluster_names.json  episode_topics.json  graph.json  topic_normalization.json
scripts/: build_index.py  chunk.py  config.py  download.py  embed.py  embed_server.py  pipeline.py  process.py  rename_transcripts.py  summarize.py  topics.py  transcribe.py  upload.py
transcripts/: GLT1009653979.json  GLT1045527974.chunks.json  GLT1045527974.json  GLT1087479608.json  GLT1091441909.json  GLT1101123319.json  GLT1113078456.json  GLT1197892978.json  GLT1230939541.json  GLT1231252361.json  GLT1303150514.json  GLT1307434321.json  GLT1307868209.json  GLT1352029340.json  GLT1352398343.json  GLT1355568981.json  GLT1397155511.json  GLT1436291545.json  GLT1447802275.json  GLT1553321237.json  GLT1596688817.json  GLT1599242785.json  GLT1609001577.json  GLT1634523548.json  GLT1646335113.json  GLT1652988096.json  GLT1660346936.json  GLT1675817874.json  GLT1743894496.json  GLT1766800781.json  GLT1787154316.json  GLT1788866495.json  GLT1793564636.json  GLT1796588148.json  GLT1833510193.json  GLT1847113587.json  GLT1881677203.json  GLT1943380949.json  GLT1959396530.json  GLT1976860744.json  (+673 more)
web/: .env.example  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+36 files in other folders)
